--- a/src/app/comman/nav-bar/nav-bar.component.html
+++ b/src/app/comman/nav-bar/nav-bar.component.html
@@ -15,6 +15,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#" routerLink="app-add-item-page">Add Item</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" routerLink="app-manage-item-page">Manage Item</a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown
