--- a/src/app/page/manage-item-page/manage-item-page.component.html
+++ b/src/app/page/manage-item-page/manage-item-page.component.html
@@ -1,1 +1,83 @@
-<p>manage-item-page works!</p>
+<div class="" >
+
+    <div class="table-container">
+      <table class="planners-table">
+        <thead>
+          <tr>
+            <th>Count</th>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Availibility</th>
+            <th>Rental Per Day</th>
+            <th>Fine Per Day</th>
+            <th>Delete</th>
+            <th>Update</th>
+          </tr>
+        </thead>
+        <tbody>
+
+           
+          <tr *ngFor="let item of itemList; index as i">
+            <td>{{i+1}}</td>
+            <td>{{item.itemId}}</td>
+            <td>{{item.name}}</td>
+            <td>{{item.availability}}</td>
+            <td>{{item.rentalPerDay}}</td>
+            <td>{{item.finePerDay}}</td>
+
+            <td><button class="btn btn-outline-danger" (click)="deleteItemById(item.itemId)">delete</button></td>
+           
+            <td><button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                (click)="updateItem(item)">update</button></td>
+
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  
+
+
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Update Customer</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Id</label>
+            <input type="text" class="form-control" [(ngModel)]="itemTemp.itemId" id="recipient-name"
+              disabled="true">
+          </div>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Name</label>
+            <input type="text" class="form-control" [(ngModel)]="itemTemp.name" id="recipient-name">
+          </div>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Availability</label>
+            <input type="text" class="form-control" [(ngModel)]="itemTemp.availability" id="recipient-name">
+          </div>
+         
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Rental Per Day</label>
+            <input type="text" class="form-control" [(ngModel)]="itemTemp.rentalPerDay" id="recipient-name">
+          </div>
+
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Fine Per Day</label>
+            <input type="text" class="form-control" [(ngModel)]="itemTemp.finePerDay" id="recipient-name">
+          </div>
+
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" (click)="saveItem()" data-bs-dismiss="modal">Update
+            Item</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
