--- a/src/app/page/manage-customer-page/manage-customer-page.component.html
+++ b/src/app/page/manage-customer-page/manage-customer-page.component.html
@@ -21,7 +21,7 @@
             <td>{{customer.id}}</td>
             <td>{{customer.name}}</td>
             <td>{{customer.city}}</td>
-            <td>{{customer.Contact}}</td>
+            <td>{{customer.contact}}</td>
 
             <td><button class="btn btn-outline-danger" (click)="deleteCustomerById(customer.id)">delete</button></td>
            
