--- a/src/app/page/manage-rental-page/manage-rental-page.component.html
+++ b/src/app/page/manage-rental-page/manage-rental-page.component.html
@@ -1,1 +1,83 @@
-<p>manage-rental-page works!</p>
+<div class="" >
+    
+    <div class="table-container">
+      <table class="planners-table">
+        <thead>
+          <tr>
+            <th>Count</th>
+            <th>ID</th>
+            <th>Rental Date</th>
+            <th>Return Date</th>
+            <th>Due Date</th>
+            <th>total Cost</th>
+            <th>Delete</th>
+            <th>Update</th>
+          </tr>
+        </thead>
+        <tbody>
+
+           
+          <tr *ngFor="let rental of rentalList; index as i">
+            <td>{{i+1}}</td>
+            <td>{{rental.rentalId}}</td>
+            <td>{{rental.rentalDate}}</td>
+            <td>{{rental.returnDate}}</td>
+            <td>{{rental.dueDate}}</td>
+            <td>{{rental.totalCost}}</td>
+
+            <td><button class="btn btn-outline-danger" (click)="deleteRentalById(rental.rentalId)">delete</button></td>
+           
+            <td><button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                (click)="updateRental(rental)">update</button></td>
+
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  
+
+
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Update Customer</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Id</label>
+            <input type="text" class="form-control" [(ngModel)]="rentalTemp.rentalId" id="recipient-name"
+              disabled="true">
+          </div>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Name</label>
+            <input type="text" class="form-control" [(ngModel)]="rentalTemp.rentalDate" id="recipient-name">
+          </div>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Availability</label>
+            <input type="text" class="form-control" [(ngModel)]="rentalTemp.returnDate" id="recipient-name">
+          </div>
+         
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Rental Per Day</label>
+            <input type="text" class="form-control" [(ngModel)]="rentalTemp.dueDate" id="recipient-name">
+          </div>
+
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Fine Per Day</label>
+            <input type="text" class="form-control" [(ngModel)]="rentalTemp.totalCost" id="recipient-name">
+          </div>
+
+
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" (click)="saveRental()" data-bs-dismiss="modal">Update
+            Item</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
