--- a/src/app/comman/nav-bar/nav-bar.component.html
+++ b/src/app/comman/nav-bar/nav-bar.component.html
@@ -21,6 +21,12 @@
           <li class="nav-item">
             <a class="nav-link" href="#" routerLink="app-add-rental-page">Rental</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" routerLink="app-manage-rental-page">Manage Rental</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" routerLink="app-bill-page">Bill</a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown
